# autonomous-project-managament

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  test.ipynb
chroma/: chroma.sqlite3
data/: firm_sop_v3.json  meeting_minutes_alpha.txt
src/apm/: agent.py
