[project]
name = "interview-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "langgraph-api>=0.7.87",
    "langgraph-cli[inmem]>=0.4.19",
    "pypdf>=6.9.2",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipykernel>=7.2.0",
]
